crates/reap-pm-live-contracts/tests/ui/model_cannot_request_private_or_mutation.stderr
error[E0599]: no variant or associated item named `PrivateOrder` found for enum `PmModelInputRequirement` in the current scope
 --> tests/ui/model_cannot_request_private_or_mutation.rs:4:38
  |
4 |     let _ = PmModelInputRequirement::PrivateOrder;
  |                                      ^^^^^^^^^^^^ variant or associated item not found in `PmModelInputRequirement`

error[E0599]: no variant or associated item named `OwnedExecution` found for enum `PmModelInputRequirement` in the current scope
 --> tests/ui/model_cannot_request_private_or_mutation.rs:5:38
  |
5 |     let _ = PmModelInputRequirement::OwnedExecution;
  |                                      ^^^^^^^^^^^^^^ variant or associated item not found in `PmModelInputRequirement`
