crates/reap-pm-live-contracts/tests/ui/model_cannot_request_private_or_mutation.rs
use reap_pm_strategy::PmModelInputRequirement;

fn main() {
    let _ = PmModelInputRequirement::PrivateOrder;
    let _ = PmModelInputRequirement::OwnedExecution;
}
